--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,10 @@
-*{
+@font-face {
+    font-family: Ricky;
+    src: url(../get-schwifty.ttf);
+}
+
+body{
+    background-color:black;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
@@ -6,23 +12,16 @@
     font-style: normal;
     font-weight: normal;
     color: white;
-
-}
-body{
-    background-color:black;
 }
 
 header{
-    
     width: 100%;
     height: 990px;
     left: 0px;
     top: 0px;
     background: url('../carte\ arpanet.png') no-repeat center;
-    
+    font-family: Ricky;
     display: flex;
-    
-    
 }
 nav{
     display: flex;
@@ -47,6 +46,14 @@ a{
     margin-right: 15px;
     color: white;
 }
+.titre:hover{
+    color: rgb(127, 255, 0);
+    cursor: pointer;
+}
+.lien:hover{
+    color: rgb(127, 255, 0);
+}
+
 
 .center{
     text-align:center;
@@ -65,10 +72,8 @@ img{
     object-fit:cover;
 }
 .divi{
-    
     width:200px;
     height: 200px;
-    
 }
 
 iframe{
@@ -78,7 +83,6 @@ iframe{
 .container{
     display: flex;
     justify-content: space-around;
-     
 }
 
 .textesaison{
@@ -94,7 +98,6 @@ iframe{
 
 .back-iframe{
     background: url('../image\ figma.jpg') no-repeat center;
-    
     height: 600px;
 }
 
@@ -114,7 +117,6 @@ span{
 }
 
 label {
-    
     display: inline-block;
     width: 90px;
     text-align: right;
@@ -122,9 +124,7 @@ label {
 .formu{
     margin: 0 auto;
     width: 400px;
-    padding: 2px;
-    
-           
+    padding: 2px;    
 }
 .contact{
     text-align: center
